# python-boilerplate

./: .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  .hadolint.yaml  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .yamllint  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: category.csv
src/: main.py
src/app/: config.py
src/app/utils/: data_utils.py  rich_utils.py
src/cli/: cli.py
tests/integration/: main.py
tests/unit/: data_utils.py
