[tool.poetry]
name = "python-boilerplate"
version = "0.1.0"
description = ""
authors = ["Tran Nhan <nhantt.gis@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.6.1"
click = "^8.1.7"
loguru = "^0.7.2"
humanize = "^4.11.0"
pandas = "^2.2.3"
rich = "^13.9.4"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pre-commit = "^4.0.1"
black = "^24.10.0"
pylint = "^3.3.1"
yamllint = "^1.35.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '\.git|\.hg|\.mypy_cache|\.tox|\.venv|build|dist'
skip-source-first-line = false
skip-string-normalization = false
skip-magic-trailing-comma = false
